--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   db:
     image: postgres:17
-    container_name: postgres
+    container_name: auth-db
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: admin
@@ -13,11 +13,11 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  go-app:
+  auth-app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: go-app
+    container_name: auth-app
     depends_on:
       - db
     environment:
